external-crates/move/move-compiler/tests/move_check/typing/bind_duplicate_binding.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:14
  │
5 │         let (x, x) = (0, 0); x;
  │              ^ Unused assignment for variable 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:5:17
  │
5 │         let (x, x) = (0, 0); x;
  │              -  ^ Duplicate declaration for local 'x' in a given 'let'
  │              │   
  │              Previously declared here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:14
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0); f;
  │              ^ Unused assignment for variable 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0); f;
  │              -    ^ Duplicate declaration for local 'f' in a given 'let'
  │              │     
  │              Previously declared here

warning[W09003]: unused assignment
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0); f;
  │                   ^ Unused assignment for variable 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/bind_duplicate_binding.move:6:23
  │
6 │         let (f, R{f}, f) = (0, R { f: 0 }, 0); f;
  │              -        ^ Duplicate declaration for local 'f' in a given 'let'
  │              │         
  │              Previously declared here

